Update intern experience

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <h1 id="">程亦直</h1>
 <h2 id="-1">联系方式</h2>
 <ul>
-<li><img src="https://img.icons8.com/ios/50/000000/phone-filled.png">18818275727</li>
-<li><img src="https://img.icons8.com/ios/50/000000/secured-letter-filled.png">yzcheng117@gmail.com</li>
-<li><img src="https://img.icons8.com/ios/50/000000/github-filled.png">https://github.com/tabdel117</li>
+<li><img src="https://img.icons8.com/ios/50/000000/phone-filled.png"><a href="tel:18818275727">18818275727</a></li>
+<li><img src="https://img.icons8.com/ios/50/000000/secured-letter-filled.png"><a href="mailto:yzcheng117@gmail.com">yzcheng117@gmail.com</a></li>
+<li><img src="https://img.icons8.com/ios/50/000000/github-filled.png"><a href="https://github.com/tabdel117">https://github.com/tabdel117</a></li>
 </ul>
 <h2 id="-2">教育背景</h2>
 <div class="education">
@@ -38,52 +38,67 @@
 <li>操作系统</li>
 </ul>
 </div>
-<h2 id="-4">技能清单</h2>
+<h2 id="-4">技能清单</h2><div class="skill">
 <ul>
 <li>文件上传</li>
 <li>时间处理（时区等）</li>
 <li>表单处理</li>
-<li>websocket长连接</li>
+<li>websocket</li>
 <li>基于less的皮肤切换</li>
+<li>React SSR</li>
 </ul>
-<div class="skill">
-<h3 id="reactredux">前端框架: React + Redux</h3>
-<p>包含普通网页、Electron、微信小程序等实践</p>
-<h3 id="nodejsexpress">NodeJS: Express</h3>
-<p>以及延伸的 EggJS 框架、Sequelize 等数据库 ORM</p>
-<h3 id="jscsshtml">JS + CSS + HTML 基础</h3>
-<p>包含 ES6 前的原生 js，以及 ES6 后的 js。熟悉常用 CSS，包含 flex 布局等</p>
+<div class="sub-skill">
+<h3 id="reactreduxreacthooks">前端框架: React + Redux/React Hooks</h3>
+<p>含hybrid、Electron、微信小程序等实践</p>
 </div>
-<h2 id="-5">项目经历</h2>
+<div class="sub-skill">
+<h3 id="nodejsexpress">NodeJS: Express</h3>
+<p>及延伸的 EggJS 框架、Sequelize 等数据库 ORM、 RPC服务调用</p>
+</div>
+<div class="sub-skill">
+<h3 id="tscsshtml">TS + CSS + HTML 基础</h3>
+<p>含原生 js 和 ES6，熟悉常用 CSS，包含 flex 布局等</p>
+</div>
+</div>
+<h2 id="-5">实习经历</h2><div class="intern">
+<h3 id="2019620198">字节跳动-头条研发 2019.6-2019.8</h3>
+<ul>
+<li>了解并掌握 Lint 等相关工具链及打包发布脚本的配置和编写</li>
+<li>负责 monorepo 中编译启动脚本的统一迁移（涉及 webpack , babel 及 ts 编译配置）</li>
+<li>负责基于 React-intl-universal 的国际化方案优化及 SSR 方案调研和优化</li>
+<li>参与基于 React hooks 和 Redux 的 hybrid App 端和 cms 中台系统业务体验优化</li>
+</ul>
+</div>
+<h2 id="-6">项目经历</h2>
 <div class="project">
-<h3 id="senmartstst">Sen Mart 企业管理系统 <span class="sub-title">公司货物贸易流转的全流程管理系统</span></h3>
+<h3 id="senmartst80st">Sen Mart 公司货物贸易流转的全流程管理系统 <span class="sub-title">负责内容涵盖80%的业务功能点</span></h3>
 <ul>
 <li>基于 Electron 开发的桌面应用，实现用户拍照打卡、动态流程图、皮肤切换等功能</li>
 <li>通过 Node 端实现打印、数据报告生成、自研网盘同步等网页难以完成的功能</li>
 <li>后端使用 Express 开发，实现了操作排他锁、复杂数据筛选、websocket 实时同步等</li>
-<li>已稳定支撑公司运行1年多，累计流转约2万个订单。本项目对于 Redux 有较为深入的使用</li>
 </ul>
-<p>主要负责：后半部分开发的主要内容，涵盖80%的业务功能点</p>
-<h3 id="ustst">米U校园 <span class="sub-title">高校信息自动化管理工具和多人任务协作系统</span></h3>
+<h3 id="ustst">米U校园 高校信息管理工具和多人任务协作系统 <span class="sub-title">负责微信小程序和部分后台数据管理</span></h3>
 <ul>
-<li>使用 React+Redux 构建 PC 端网页，实现表单校验和数据可视化管理编辑，并包含与地图结合的开发</li>
+<li>使用 React+Redux 构建 PC 端网页，实现表单校验和数据可视化管理编辑</li>
 <li>微信小程序端基于 TaroJS 实现通讯录和历史记录可视化等</li>
 <li>后端服务基于 NodeJS ，使用 EggJS 框架并结合 SequelizeJS 进行数据库操作</li>
-<li>覆盖了 PC 到移动端全线前端，支撑了5个高校相关部门的信息化管理</li>
 </ul>
-<p>主要负责：微信小程序和后台数据管理以及部分 EggJS 逻辑</p>
 </div>
-<h2 id="-6">奖项与证书</h2>
+<h2 id="-7">奖项与证书</h2>
 <ul>
 <li>CET6 617、上海市英语中级口译证书</li>
 <li>曾获国家奖学金、特高压奖学金、思源电气奖学金、2013-2016 上海交通大学优秀奖学金等</li>
 <li>2017年上海交通大学优秀毕业生</li>
 </ul>
-<h2 id="-7">科研经历</h2>
-<p>从事电动汽车、空调等分布式能源能量优化相关课题，以第一作者发表 EI 论文和 IEEE PESGM 会议论文《分布式电池储能系统参与自动发电控制的协调控制方法》<a href="http://kns.cnki.net/KCMS/detail/detail.aspx?dbcode=CJFQ&dbname=CJFDLAST2018&filename=DLXT201808010&v=MDU3NjRlckc0SDluTXA0OUVaSVI4ZVgxTHV4WVM3RGgxVDNxVHJXTTFGckNVUkxPZlpPWm1GeURuVXJyTElTSFQ=">(已发表)</a>、《Autonomous-Collaborative Energy Optimization for Interconnected Energy Hubs Based on Transactive Control》(已录用)和《配电网中电动汽车的实时滚动交易式充电管理》</p>
-<h2 id="-8">自我评价</h2>
+<h2 id="-8">科研经历 (一作)</h2>
 <ul>
-<li>逻辑思维能力强，严谨细致、认真负责，执行力强</li>
+<li>分布式电池储能系统参与自动发电控制的协调控制方法<a href="http://kns.cnki.net/KCMS/detail/detail.aspx?dbcode=CJFQ&dbname=CJFDLAST2018&filename=DLXT201808010&v=MDU3NjRlckc0SDluTXA0OUVaSVI4ZVgxTHV4WVM3RGgxVDNxVHJXTTFGckNVUkxPZlpPWm1GeURuVXJyTElTSFQ="> (EI 已发表)</a></li>
+<li>配电网中电动汽车的实时滚动交易式充电管理<a href="http://kns.cnki.net/KCMS/detail/11.2107.TM.20190422.0948.003.html?uid=WEEvREdxOWJmbC9oM1NjYkZCbDdrdWdYYjlwaWNOOEhGbEowWWtodm5FWDM=$R1yZ0H6jyaa0en3RxVUd8df-oHi7XMMDo7mtKT6mSmEvTuk11l2gFA!!&v=MjgxMDBiYkc0SDlqTXE0NU1aT3NMWXc5TXptUm42ajU3VDNmbHFXTTBDTEw3UjdxZWJ1WnFGaURsVkwzSUlGZz1QeXJQ"> (EI 已录用)</a></li>
+<li>Autonomous-Collaborative Energy Optimization for Interconnected Energy Hubs Based on Transactive Control (IEEE 会议已录用)</li>
+</ul>
+<h2 id="-9">自我评价</h2>
+<ul>
+<li>逻辑思维能力强，认真负责，执行力强</li>
 <li>乐于接触新概念、技术和工具</li>
 </ul>
 </div>
